--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100@200@300@700@400@900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
     <div style="" class="header">
         <header class="header2">
-            <div class="logo"><img src="webb/Rectangle 416.png" alt=""></div>
+            <div onclick="window.location.href='webb/homepage.html'" class="logo"><img src="webb/Rectangle 416.png" alt=""></div>
             <nav class="nav">
                 <a href="#find_friend">Adoptions</a>
                 <a href="#funding">Funding</a>
-                <a onclick="window.location.href='about_us/index.html'" href="#">About us</a>
+                <a href="#about">About us</a>
                 <a href="#contact">Contact</a>
-                <button onclick="window.location.href='adopt_form/index.html'" class="cta">SAVE A LIFE NOW </button>
+                <button class="cta" onclick="window.location.href='adopt_form/index.html'">SAVE A LIFE NOW</button>
             </nav>
         </header>
         <!-- <div class="header_function">
@@ -34,7 +33,7 @@
             <span style="color: #FFE3AE; font-size: 30px;font-family: 'Be Vietnam Pro', sans-serif;">Over 1,000 cats and dogs need a new shelter, <br>You are the ones to give them.</span>
         </div>
     </div>
-
+s
     <div class="homepage_body" id="find_friend">
         <h1 style="margin-top: 121px; text-align: center; font-size: 60px; color: #1509A4;">FIND YOUR NEW BEST FRIEND</h1>
         <img onclick="window.location.href='webb/cat_in4.html'" class="find_friend_image" src="webb/Rectangle 418.png" alt="">
@@ -70,7 +69,7 @@
             </div>
         </div>
 
-        <div class="footer">
+        <div class="footer" id="about">
             <div class="footer_in4">
                 <div class="in4_us">
                     <span style=" font-family: 'Be Vietnam Pro', sans-serif;;">We are a non-profit organization whose aim is to rescue all the stray dogs <br> and cats, find them a new cozy shelters. We and their lives, and you give <br> them a new life.</span>
